# telephony_state_registry

./: BUILD.gn  Cargo.toml  README.md  README_zh.md  bundle.json  ohos.build
frameworks/cj/: BUILD.gn
frameworks/cj/src/: observer_event_handler.cpp  observer_event_handler.h  telephony_observer_ffi.cpp  telephony_observer_ffi.h  telephony_observer_impl.cpp  telephony_observer_impl.h  telephony_observer_log.h  telephony_observer_utils.cpp  telephony_observer_utils.h
frameworks/ets/ani/observer/: BUILD.gn  Cargo.toml
frameworks/ets/ani/observer/ets/: @ohos.telephony.observer.ets
frameworks/ets/ani/observer/include/: observer_ani.h
frameworks/ets/ani/observer/src/: bridge.rs  lib.rs  log.rs  observer.rs  register.rs  wrapper.rs
frameworks/ets/ani/observer/src/cxx/: observer_ani.cpp
frameworks/ets/taihe/: BUILD.gn
frameworks/ets/taihe/idl/: ohos.telephony.observer.taihe
frameworks/ets/taihe/src/: ani_constructor.cpp  ohos.telephony.observer.impl.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: event_listener.h  event_listener_handler.h  event_listener_manager.h  napi_state_registry.h  napi_telephony_observer.h  telephony_callback_event_id.h  telephony_update_event_type.h  update_contexts.h  update_infos.h
frameworks/js/napi/src/: event_listener_handler.cpp  event_listener_manager.cpp  napi_state_registry.cpp  napi_telephony_observer.cpp
frameworks/native/: BUILD.gn
frameworks/native/common/include/: i_telephony_state_notify.h  telephony_observer_broker.h  telephony_state_registry_proxy.h
frameworks/native/common/src/: telephony_state_registry_proxy.cpp
frameworks/native/include/: telephony_observer.h  telephony_observer_client.h  telephony_observer_proxy.h  telephony_state_manager.h
frameworks/native/notify/: BUILD.gn
frameworks/native/notify/src/: telephony_state_registry_client.cpp
frameworks/native/observer/: BUILD.gn
frameworks/native/observer/include/: telephony_observer.h  telephony_observer_proxy.h  telephony_state_manager.h
frameworks/native/observer/src/: telephony_observer.cpp  telephony_observer_client.cpp  telephony_observer_proxy.cpp  telephony_state_manager.cpp
frameworks/native/src/: telephony_observer.cpp  telephony_observer_client.cpp  telephony_observer_proxy.cpp  telephony_state_manager.cpp
interfaces/innerkits/: libtel_state_registry_api.versionscript
interfaces/innerkits/notify/: telephony_state_registry_client.h
interfaces/innerkits/observer/: telephony_observer.h  telephony_observer_client.h
interfaces/kits/: BUILD.gn
interfaces/kits/include/: kit_state_registry_hilog_wrapper.h  telephony_observer.h  telephony_observer_proxy.h  telephony_observer_proxy_holder.h  telephony_state_manager.h
interfaces/kits/js/: @ohos.telephony.observer.d.ts
interfaces/kits/js/declaration/: @ohos.telephony.observer.d.ts
interfaces/kits/js/napi/: BUILD.gn
interfaces/kits/js/napi/include/: event_listener.h  event_listener_handler.h  function_callback_handler.h  napi_state_registry.h  napi_telephony_observer.h  telephony_callback_event_id.h  update_contexts.h  update_infos.h
interfaces/kits/js/napi/src/: event_listener_handler.cpp  event_listener_manager.cpp  function_callback_handler.cpp  napi_state_registry.cpp  napi_telephony_observer.cpp
interfaces/kits/src/: telephony_observer.cpp  telephony_observer_proxy.cpp  telephony_observer_proxy_holder.cpp  telephony_state_manager.cpp
interfaces/kits/test/: BUILD.gn  state_registry_api_test.cpp
sa_profile/: 4009.json  4009.xml  BUILD.gn
service/include/: hilog_wrapper.h  telephony_state_registry_dump_helper.h  telephony_state_registry_record.h  telephony_state_registry_service.h  telephony_state_registry_stub.h
service/src/: telephony_state_registry_dump_helper.cpp  telephony_state_registry_record.cpp  telephony_state_registry_service.cpp  telephony_state_registry_stub.cpp
services/include/: telephony_state_registry_record.h  telephony_state_registry_service.h  telephony_state_registry_stub.h
services/src/: telephony_state_registry_dump_helper.cpp  telephony_state_registry_record.cpp  telephony_state_registry_service.cpp  telephony_state_registry_stub.cpp
services/telephony_ext_wrapper/include/: telephony_ext_wrapper.h
services/telephony_ext_wrapper/src/: telephony_ext_wrapper.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/common_fuzzer/: addstateregistrytoken_fuzzer.cpp  addstateregistrytoken_fuzzer.h
test/fuzztest/telephonyobserver_fuzzer/: BUILD.gn  telephonyobserver_fuzzer.cpp  telephonyobserver_fuzzer.h
test/fuzztest/telephonystateregistry_fuzzer/: BUILD.gn  telephonystateregistry_fuzzer.cpp  telephonystateregistry_fuzzer.h
test/mock/: mock_telephony_permission.cpp  mock_telephony_permission.h
test/unittest/: BUILD.gn  state_regist_test.cpp
test/unittest/state_registry_gtest/: BUILD.gn  state_registry_test.cpp
test/unittest/state_test/: BUILD.gn  security_token.h  state_registry_branch_test.cpp  state_registry_branch_test.h  state_registry_observer.h  state_registry_test.cpp  state_registry_test.h
