# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/state_registry"
CORE_DIR = "//base/telephony/core_service"

ohos_shared_library("tel_state_registry") {
  part_name = "state_registry"
  subsystem_name = "telephony"

  sources = [
    "$SOURCE_DIR/frameworks/native/observer/src/telephony_observer_proxy.cpp",
    "$SOURCE_DIR/service/src/telephony_state_registry_dump_helper.cpp",
    "$SOURCE_DIR/service/src/telephony_state_registry_record.cpp",
    "$SOURCE_DIR/service/src/telephony_state_registry_service.cpp",
    "$SOURCE_DIR/service/src/telephony_state_registry_stub.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/frameworks/native/observer/include",
    "$SOURCE_DIR/frameworks/native/common/include",
    "$SOURCE_DIR/service/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [ "$CORE_DIR/utils:libtel_common" ]

  external_deps = [
    "ability_base:want",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines += [
    "TELEPHONY_LOG_TAG = \"StateRegistry\"",
    "LOG_DOMAIN = 0xD001F07",
  ]
}
