# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("tel_state_registry") {
  part_name = "state_registry"
  subsystem_name = "telephony"

  sources = [
    "frameworks/native/observer/src/telephony_observer_proxy.cpp",
    "services/src/telephony_state_registry_dump_helper.cpp",
    "services/src/telephony_state_registry_record.cpp",
    "services/src/telephony_state_registry_service.cpp",
    "services/src/telephony_state_registry_stub.cpp",
  ]

  include_dirs = [
    "frameworks/native/observer/include",
    "frameworks/native/common/include",
    "services/include",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"StateRegistry\"",
    "LOG_DOMAIN = 0xD001F07",
  ]
}
