# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../.."

ohos_shared_library("cj_observer_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"
  include_dirs = 
    [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include" ]

  sources = [
    "src/tel_cellular_data_ffi.cpp",
    "src/tel_cellular_data_impl.cpp",
  ]

  deps =
    [ "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api" ]

  external_deps = [
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "libuv:uv",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "state_registry"
  subsystem_name = "telephony"
}
