# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony/state_registry"
STATE_REGISTRY_API_DIR = "$SUBSYSTEM_DIR/interfaces/kits"

ohos_shared_library("tel_state_registry_api") {
  sources = [
    "$STATE_REGISTRY_API_DIR/src/telephony_observer.cpp",
    "$STATE_REGISTRY_API_DIR/src/telephony_observer_proxy.cpp",
    "$STATE_REGISTRY_API_DIR/src/telephony_state_manager.cpp",
    "//base/telephony/core_service/interfaces/innerkits/state_registry/proxy/telephony_state_registry_proxy.cpp",
    "//base/telephony/core_service/network_search/src/network_state.cpp",
    "//base/telephony/core_service/network_search/src/signal_information.cpp",
  ]

  include_dirs = [
    "//utils/native/base/include",
    "//third_party/node/src",
    "$STATE_REGISTRY_API_DIR/include",
    "$SUBSYSTEM_DIR/service/include",
    "//base/telephony/core_service/interfaces/innerkits/common",
    "//base/telephony/core_service/interfaces/innerkits/state_registry/proxy",
  ]
  deps = [
    "$SUBSYSTEM_DIR:tel_state_registry",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ipc:ipc_core",
    "hiviewdfx_hilog_native:libhilog",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  part_name = "state_registry"
  subsystem_name = "telephony"
}
