# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony/state_registry"
STATE_REGISTRY_API_DIR = "$SUBSYSTEM_DIR/interfaces/kits"
CORE_DIR = "//base/telephony/core_service"

ohos_shared_library("tel_state_registry_api") {
  sources = [
    "$CORE_DIR/interfaces/innerkits/state_registry/proxy/telephony_state_registry_proxy.cpp",
    "$CORE_DIR/network_search/src/network_state.cpp",
    "$CORE_DIR/network_search/src/signal_information.cpp",
    "$STATE_REGISTRY_API_DIR/src/telephony_observer.cpp",
    "$STATE_REGISTRY_API_DIR/src/telephony_observer_proxy.cpp",
    "$STATE_REGISTRY_API_DIR/src/telephony_state_manager.cpp",
  ]

  include_dirs = [
    "//third_party/node/src",
    "$STATE_REGISTRY_API_DIR/include",
    "$SUBSYSTEM_DIR/service/include",
    "$CORE_DIR/interfaces/innerkits/api",
    "$CORE_DIR/interfaces/innerkits/common",
    "$CORE_DIR/interfaces/innerkits/state_registry/proxy",
    "//base/telephony/ril_adapter/interfaces/innerkits",
  ]
  deps = [
    "$CORE_DIR/common:libtelephony_common",
    "$SUBSYSTEM_DIR:tel_state_registry",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"STATE_REGISTRY\"",
    "LOG_DOMAIN = 0",
  ]

  part_name = "state_registry"
  subsystem_name = "telephony"
}
