# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/state_registry"

ohos_executable("tel_state_registry_test") {
  sources = [
    "$SOURCE_DIR/test/unittest/state_regist_test.cpp",
    "//base/telephony/core_service/interfaces/innerkits/state_registry/proxy/telephony_state_registry_proxy.cpp",
    "//base/telephony/core_service/network_search/src/network_state.cpp",
    "//base/telephony/core_service/network_search/src/signal_information.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits/proxy",
    "$SOURCE_DIR/interfaces/kits/include",
    "$SOURCE_DIR/service/include",
    "//base/telephony/include",

    "//base/telephony/core_service/interfaces/innerkits/common",
    "//base/telephony/core_service/interfaces/innerkits/state_registry/proxy",
  ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "state_registry"
  subsystem_name = "telephony"
}
