# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../../.."
ohos_shared_library("observer") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [
    "//third_party/node/src",
    "include",
    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include",
  ]

  sources = [
    "src/event_listener_handler.cpp",
    "src/event_listener_manager.cpp",
    "src/napi_state_registry.cpp",
    "src/napi_telephony_observer.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api",
    "//third_party/libuv:uv",
  ]

  external_deps = [
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"StateRegistryJsApi\"",
    "LOG_DOMAIN = 0xD001F07",
  ]

  relative_install_dir = "module/telephony"
  part_name = "state_registry"
  subsystem_name = "telephony"
}
