# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../.."

config("state_registry_observer_config") {
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/innerkits/observer",
    "$SUBSYSTEM_DIR/frameworks/native/common/include",
    "$SUBSYSTEM_DIR/services/include",
  ]
}

ohos_shared_library("tel_state_registry_api") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_observer.cpp",
    "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_observer_client.cpp",
    "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_observer_proxy.cpp",
    "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_state_manager.cpp",
  ]

  include_dirs = [ "$SUBSYSTEM_DIR/frameworks/native/observer/include" ]

  version_script = "$SUBSYSTEM_DIR/interfaces/innerkits/libtel_state_registry_api.versionscript"

  public_configs = [ ":state_registry_observer_config" ]

  external_deps = [
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"StateRegistryApi\"",
    "LOG_DOMAIN = 0xD001F07",
  ]
  install_images = [ system_base_dir ]
  relative_install_dir = "platformsdk"
  innerapi_tags = [ "platformsdk" ]
  part_name = "state_registry"
  subsystem_name = "telephony"
}
