# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony/state_registry"
SOURCE_DIR = "$SUBSYSTEM_DIR/interfaces/kits/test"
ohos_executable("tel_state_registry_api_test") {
  sources = [ "$SOURCE_DIR/state_registry_api_test.cpp" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/interfaces/kits/include",
    "$SUBSYSTEM_DIR/service/include",
    "//base/telephony/core_service/interfaces/innerkits/common",
    "//base/telephony/core_service/interfaces/innerkits/state_registry/proxy",
  ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/kits:tel_state_registry_api",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "hiviewdfx_hilog_native:libhilog",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]
  part_name = "state_registry"
  subsystem_name = "telephony"
}
