# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
SUBSYSTEM_DIR = "../../../.."
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("TelephonyObserverFuzzTest") {
  module_output_path = "state_registry/state_registry"
  module_out_path = module_output_path
  fuzz_config_file =
      "$SUBSYSTEM_DIR/state_registry/test/fuzztest/telephonyobserver_fuzzer"

  include_dirs = [
    "$SUBSYSTEM_DIR/state_registry/interfaces/innerkits/observer",
    "$SUBSYSTEM_DIR/state_registry/services/include",
    "$SUBSYSTEM_DIR/state_registry/test/fuzztest/common_fuzzer",
  ]

  deps = [
    "$SUBSYSTEM_DIR/state_registry:tel_state_registry",
    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$SUBSYSTEM_DIR/state_registry/test/fuzztest/common_fuzzer/addstateregistrytoken_fuzzer.cpp",
    "telephonyobserver_fuzzer.cpp",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":TelephonyObserverFuzzTest",
  ]
}
###############################################################################
