# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SOURCE_DIR = "//base/telephony/state_registry"
CORE_DIR = "//base/telephony/core_service"

ohos_unittest("tel_state_registry_gtest") {
  part_name = "state_registry"
  subsystem_name = "telephony"
  test_module = "tel_state_registry_gtest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "$CORE_DIR/interfaces/innerkits/state_registry/proxy/telephony_state_registry_proxy.cpp",
    "$CORE_DIR/network_search/src/network_state.cpp",
    "$CORE_DIR/network_search/src/signal_information.cpp",
    "$SOURCE_DIR/test/unittest/state_registry_gtest/state_registry_test.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits/proxy",
    "$SOURCE_DIR/interfaces/kits/include",
    "$SOURCE_DIR/service/include",
    "$CORE_DIR/common/log/include",
    "$CORE_DIR/interfaces/innerkits/common",
    "$CORE_DIR/interfaces/innerkits/state_registry/common",
    "$CORE_DIR/interfaces/innerkits/state_registry/proxy",
  ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_state_registry_gtest" ]
}
