# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SOURCE_DIR = "//base/telephony/state_registry"

ohos_unittest("tel_state_registry_test") {
  part_name = "state_registry"
  subsystem_name = "telephony"
  test_module = "tel_state_registry_test"
  module_out_path = part_name + "/" + test_module

  sources = [
    "$SOURCE_DIR/frameworks/native/common/src/telephony_state_registry_proxy.cpp",
    "$SOURCE_DIR/frameworks/native/notify/src/telephony_state_registry_client.cpp",
    "$SOURCE_DIR/test/unittest/state_test/state_registry_test.cpp",
  ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits/notify",
    "$SOURCE_DIR/frameworks/native/observer/include",
    "$SOURCE_DIR/frameworks/native/notify/include",
    "$SOURCE_DIR/frameworks/native/common/include",
    "$SOURCE_DIR/service/include",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "core_service:tel_core_service_api",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"STATE_REGISTRY_TEST\"",
    "LOG_DOMAIN = 0",
  ]
  if ("${product_name}" == "rk3568" || "${product_name}" == "DAYU") {
    defines += [ "TEL_TEST_UNSUPPORT" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
}

group("unittest") {
  testonly = true
  deps = [ ":tel_state_registry_test" ]
}
