# Copyright (C) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SOURCE_DIR = "../../.."

ohos_unittest("tel_state_registry_test") {
  part_name = "state_registry"
  subsystem_name = "telephony"
  test_module = "tel_state_registry_test"
  module_out_path = part_name + "/" + test_module

  sources = [ "$SOURCE_DIR/test/unittest/state_test/state_registry_test.cpp" ]

  include_dirs = [
    "$SOURCE_DIR/interfaces/innerkits/notify",
    "$SOURCE_DIR/frameworks/native/observer/include",
    "$SOURCE_DIR/frameworks/native/common/include",
    "$SOURCE_DIR/services/include",
    "$SOURCE_DIR/services/telephony_ext_wrapper/include",
  ]

  deps = [
    "$SOURCE_DIR:tel_state_registry",
    "$SOURCE_DIR/frameworks/native/observer:tel_state_registry_api",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"StateRegistryTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":tel_state_registry_test" ]
}
